Third commit for Jenkinsfile and Pipeline creation

--- a/pom.xml
+++ b/pom.xml
@@ -138,10 +138,10 @@
 
 					<suiteXmlFiles>
 
-						<suiteXmlFile>
-							src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>
-<!--						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
--->					</suiteXmlFiles>
+						<!--<suiteXmlFile>
+							src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>-->
+						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+					</suiteXmlFiles>
 
 
 					<argLine>
