--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
 
 						<!--<suiteXmlFile>
 							src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>-->
-						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+						<suiteXmlFile>${suiteXmlFiles}</suiteXmlFile>
 					</suiteXmlFiles>
 
 
